--- a/index.html
+++ b/index.html
@@ -190,7 +190,23 @@
                     </div><br><br>
                     <p>Serina Simons - New York</p>
                 </div>
-
+                <div class="swiper-slide">
+                    <img class="image-one" src="./assests/images/review3.webp" alt="Review"><br>
+                    <span class="txt12">
+                        “ We are lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean tellus sem, mattis
+                        in
+                        pre-tium nec,
+                        fermentum viverra dui ”
+                    </span><br><br>
+                    <div class="star-review">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div><br><br>
+                    <p>Serina Simons - New York</p>
+                </div>
             </div>
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
