--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <section>
         <div class="sub-header">
             <span class="baskervville-regular">Our Products</span>
-            <h3 class="baskervville-regular-italic">Non-dairy milk alternatives</h3>
+            <span><h3 class="baskervville-regular-italic">Non-dairy milk alternatives</h3></span>
         </div>
         <div class="flex-container">
             <div><img src="./assests/icons/WhatsApp Image 2024-12-02 at 10.27.44 AM.jpeg" alt="Products">
@@ -106,7 +106,7 @@
     <section>
         <span class="sub-header1">Our Team</span>
         <div class="flex-container">
-            <div><img src="./assests/images/Picture1.jpg" alt="">
+            <div><img src="./assests/images/serina.jpg" alt="">
                 <br>
                 <span class="head1">Serina Osman
                 </span>
@@ -125,7 +125,7 @@
                     <p class="para1">Operations Lead
                     </p>
             </div>
-            <div><img src="./assests/images/Picture3.jpg" alt="">
+            <div><img src="./assests/images/second.jpg" alt="">
                 <br>
                 <span class="head1">Bright Abubakari-Simon
                 </span>
@@ -137,7 +137,7 @@
             </div>
         </div>
     </section>
-
+    
 
     <section id="hero-two">
         <div class="sub-header">
@@ -201,7 +201,7 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                     </div><br><br>
-                    <p>Serina Simons - New York</p>
+                    <p>Serina Simons - Accra</p>
                 </div>
                 <div class="swiper-slide">
                     <img class="image-one" src="./assests/images/Picture3.jpg" alt="Review"><br>
@@ -244,6 +244,8 @@
             <ul>
                 <li><i class="fa fa-map-marker fs-16"></i>&nbsp; Sunyani-Fiapre, Ghana </li>
                 <li><i class="fa fa-phone fs-16"></i></i>&nbsp; (+233) 59 483 4474</li>
+                <li><i class="fa fa-phone fs-16"></i></i>&nbsp; (+233) 50 553 3900</li>
+                <li><i class="fa fa-phone fs-16"></i></i>&nbsp; (+233) 55 736 7368</li>
                 <li><i class="fa fa-envelope fs-13"></i> </i>&nbsp; serinaosman25@gmail.com</li>
             </ul>
             <br>
