--- a/index.html
+++ b/index.html
@@ -275,41 +275,12 @@
     <h4 class="gallery-text">GALLERY</h4>
     <div class="wrap-gallery-footer">
         <a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-01.jpg">
-            <img src="./assests/images/IMG-20240809-WA0002.jpg" alt="GALLERY">
+            <img src="./assests/images/1733154349723-1db6508c-2817-4a58-acc9-bba6157a90c8_1.jpg" alt="GALLERY">
         </a>
         <a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-02.jpg">
-            <img src="./assests/images/IMG-20240809-WA0012.jpg" alt="GALLERY">
+            <img src="./assests/images/1733154268263-4f607031-1add-4b35-921c-9739d4bc12ba_1.jpg"GALLERY">
         </a>
-        <a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-03.jpg">
-            <img src="./assests/images/IMG-20241125-WA0002.jpg" alt="GALLERY">
-        </a>
-        <a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-04.jpg">
-        <img src="./assests/images/IMG-20241125-WA0011.jpg" alt="GALLERY">
-        </a>
-        <a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-05.jpg">
-        <img src="./assests/images/IMG_20241127_215005_447.jpg" alt="GALLERY">
-        </a>
-        <a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-06.jpg">
-        <img src="./assests/images/IMG_20241128_083131_853.jpg" alt="GALLERY">
-        </a>
-        <a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-07.jpg">
-        <img src="./assests/images/IMG_20241128_083220_172.jpg" alt="GALLERY">
-        </a>
-        <a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-08.jpg">
-        <img src="./assests/images/IMG_20241128_083225_553.jpg" alt="GALLERY">
-        </a>
-        <a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-09.jpg">
-        <img src="./assests/images/IMG-20241125-WA0011.jpg" alt="GALLERY">
-        </a>
-        <a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-10.jpg">
-        <img src="./assests/images/IMG-20241125-WA0003.jpg" alt="GALLERY">
-        </a>
-        <a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-11.jpg">
-        <img src="./assests/images/IMG_20241127_215528_151.jpg" alt="GALLERY">
-        </a>
-        <a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-12.jpg">
-        <img src="./assests/images/IMG_20241128_083131_853.jpg" alt="GALLERY">
-        </a>
+        
         </div>
         </div>
     
