--- a/index.html
+++ b/index.html
@@ -42,16 +42,23 @@
 
     <nav>
         <div id="nav-links">
-            <span><a href="">NUTRIBLEND</a></span>
-            <span><a href="">Home</a></span>
-            <span><a href="">About Us</a></span>
-            <span><a href="">Our Products</a></span>
-            <span><a href="">Our Team</a></span>
-            <span><a href="">Reviews</a></span>
-            <span><a href="">Contact</a></span>
+            <span><a href="#hero">NUTRIBLEND</a></span>
+            <span><a href="#hero">Home</a></span>
+            <span><a href="#about">About Us</a></span>
+            <span><a href="#products">Our Products</a></span>
+            <span><a href="#team">Our Team</a></span>
+            <span><a href="#reviews">Reviews</a></span>
+            <span><a href="#contact">Contact</a></span>
         </div>
         <button>Order Now</button>
+         <!-- Hamburger Menu for mobile view -->
+    <div id="hamburger-menu" class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
     </nav>
+    
     <section id="hero">
         <div id="hero-overlay">
         <header>
