--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <span class="hide-on-mobile"><a href="#hero">Home</a></span>
             <span class="hide-on-mobile"><a href="#team">Our Team</a></span>
             <span class="hide-on-mobile"><a href="#reviews">Reviews</a></span>
-            <span class="hide-on-mobile"><a href="#contact">Contact</a></span>
+            <span class="hide-on-mobile"><a href="#contact">Contact Us</a></span>
         </div>
-        <button class="hide-on-mobile">Order Now</button>
+        <button class="hide-on-mobile">Our Website</button>
     </nav>
     
     
