--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div id="nav-links">
             <span class="hide-on-mobile"><a href="#hero">Home</a></span>
             <span class="show-on-mobile"><a href="#about">About Us</a></span>
-            <span class="show-on-mobile"><a href="#products">Our Products</a></span>
+            <span class="hide-on-mobile"><a href="#products">Our Products</a></span>
             <span class="hide-on-mobile"><a href="#team">Our Team</a></span>
             <span class="hide-on-mobile"><a href="#reviews">Reviews</a></span>
             <span class="hide-on-mobile"><a href="#contact">Contact Us</a></span>
