--- a/index.html
+++ b/index.html
@@ -270,8 +270,9 @@
             <img src="./assests/images/1733154349723-1db6508c-2817-4a58-acc9-bba6157a90c8_1.jpg" alt="GALLERY">
         </a>
         <a class="item-gallery-footer wrap-pic-w" href="images/photo-gallery-02.jpg">
-            <img src="./assests/images/1733154268263-4f607031-1add-4b35-921c-9739d4bc12ba_1.jpg"GALLERY">
+            <img src="./assests/images/1733154268263-4f607031-1add-4b35-921c-9739d4bc12ba_1.jpg" alt="GALLERY">
         </a>
+      
         
         </div>
         </div>
